[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realistic_username_generator"
version = "0.0.1"
authors = [
  { name="Lucid", email="frantico1@proton.me" },
]
description = "A package for generating usernames"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lucid0z/realistic_username_generator"
Issues = "https://github.com/pypa/realistic_username_generator/issues"